fixed overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,8 @@ img {
     display: none;
 }
 body {
+    width: 100vw; //newly added
+    
     overflow-x: hidden;
     transition: scroll 2s ease-in-out;
 
